--- a/Part-2/countries/src/App.css
+++ b/Part-2/countries/src/App.css
@@ -15,6 +15,14 @@ img {
   object-fit: cover;
 }
 
+.countries{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 8px;
+}
+
 .form__group {
   position: relative;
   padding: 20px 0 0;
